--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
 </head>
 <body>
-    <embed src="https://voca.ro/1otmZGCovK8K" 
-       align="baseline" border="0" width="145" 
-       height="60" autostart="false" loop="true">
+    <embed src="https://voca.ro/1otmZGCovK8K" align="baseline" border="0" width="145" height="60" autostart="false" loop="true">
 	<h1>HALO KYA</h1>
     <p>ky kalau ada apa apa cerita ya, ya gue tau ga bisa cerita secara face to face karena gue di rumah, tapi gue ada ko ky even nanti pas gue di rs pun gue tetep ada, so jangan sungkan buat hubungin gue, ngeluh ke gue, bahagiain diri lu, utamain diri lu oke? kalau di kos jangan males makan karena kuliah butuh bannyak tenaga sama pikiran. Beneran kabarin gue ya kalau ada apa apa? Walaupun lu ada pacar tapi gpp kabarin aja, tetep jadi kya yang waras ya ky, tetep jadi orang yg labil, tetep jadi orang yg baik, jangan bego bego soalnya kasian temen lu wkwkw becanda gue. BAHAGIA TERUS KYA :) </p>
 </body>
